<resources>
    <string name="app_name">Trees</string>
    <string name="main_login_label">LOGIN</string>
    <string name="main_email_label">Email</string>
    <string name="main_password_label">Password</string>
    <string name="main_button_login">Log In</string>
    <string name="main_register_button">Register</string>
    <string name="signup_name_label">Name</string>
    <string name="signup_email_label">Email</string>
    <string name="signup_password_label">Password</string>
    <string name="signup_confirm_button">Confirm</string>
    <string name="main_error_label">Error. Check Email or Password.</string>
    <string name="signup_error_label">Email already in use.</string>
    <string name="home_garden_button">My Garden</string>
    <string name="home_button_home">Home</string>
    <string name="home_recycler_view_button">info</string>
    <string name="tree_detail_name_label">Name :</string>
    <string name="tree_detail_scientific_name_label">Scientific species :</string>
    <string name="tree_detail_country_label">Country :</string>
    <string name="tree_detail_co2_label">Co2: </string>
    <string name="tree_detail_add_button">Add to garden</string>
    <string name="garden_home_toolbar">Home</string>
    <string name="garden_detail_home_toolbar">Home</string>
    <string name="tree_detail_home_toolbar">Home</string>
    <string name="tree_detail_nickname_label">Nickname: </string>
    <string name="tree_detail_added_date_label">Added Date: </string>
    <string name="garden_detail_save_button">Save Nickname</string>
    <string name="garden_detail_snackbar">Nickname saved!</string>
    <string name="tree_detail_snackbar">Added to your Garden!</string>
</resources>